prusti-tests/tests/parse/ui/closures_fail-1.stderr
error: expected one of `:`, `@`, or `|`, found `)`
  --> $DIR/closures_fail-1.rs:12:13
   |
12 |       let f = closure!(
   |  _____________^
13 | |         requires(i >= 0),
14 | |         ensures(result == i + 1),
15 | |         |i| -> i32 { i + 1 }
   | |           - expected one of `:`, `@`, or `|`
16 | |     );
   | |_____^ unexpected token
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: if this is a `self` type, give it a parameter name
   |
15 |         |self: i| -> i32 { i + 1 }
   |          ^^^^^^^
help: if this is a parameter name, give it a type
   |
15 |         |i: TypeName| -> i32 { i + 1 }
   |          ^^^^^^^^^^^
help: if this is a type, explicitly ignore the parameter name
   |
15 |         |_: i| -> i32 { i + 1 }
   |          ^^^^

error: aborting due to previous error

